--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grom",
-  "homepage": "https://github.com/flim1231/Adaptiv.git",
+  "homepage": "https://flim1231.github.io/adapt/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
